K8s/ingress/ingress.yaml
# minikube already have ingress add on package/plugin with in it.
# minikube addons enable ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: home.com               # Assign host name to IP add in /etc/hosts file
    http:                         # echo " 192.168.0.5 domain.com" >> /etc/hosts
      paths:
      - pathType: Prefix
        path: "/"                   # name based routing  
        backend:
          service:
            name: my-svc-home 
            port: 
              number: 80
      # - pathType: Prefix
      #   path: "/mobile"           # path pased routing
      #   backend:
      #     service:
      #       name: my-svc-mobile  
      #       port: 
      #         number: 80
  - host: mobile.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-svc-mobile
            port: 
              number: 80
